--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 		<div id="controls">
 			<label for="country">Country:</label>
 			<input id="country" type="text" name="country" />
+			<label for="all">All Countries</label>
+			<input type="checkbox" id="all" value=""/>
 			<p></p><button id="lookup">Lookup</button></p>
 		</div>
 
