--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<label for="country">Country:</label>
 			<input id="country" type="text" name="country" />
 			<label for="all">All Countries</label>
-			<input type="checkbox" id="all" value=""/>
+			<input type="checkbox" id="all" value="true"/>
 			<p></p><button id="lookup">Lookup</button></p>
 		</div>
 
